--- a/src/SynchronizeFiltersWithFullscreenPreviewAddon/SynchronizeFiltersWithFullscreenPreview.csproj
+++ b/src/SynchronizeFiltersWithFullscreenPreviewAddon/SynchronizeFiltersWithFullscreenPreview.csproj
@@ -9,9 +9,10 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SynchronizeFiltersWithFullscreenPreview</RootNamespace>
-    <AssemblyName>SynchronizeFiltersWithFullscreenPreview</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <AssemblyName>SynchronizeFiltersWithFullscreenPreviewAddon</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
